--- a/index.html
+++ b/index.html
@@ -24,22 +24,31 @@
         </ul>
       </nav>
       <ul class="contacts">
-        <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contacts-item"><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com"><svg class="contacts-link-icon" width="16px" height="12px">
+          <use href="./images/header-icons.svg#icon-envelope"></use>
+        </svg>info@devstudio.com</a></li>
+        <li class="contacts-item"><a class="contacts-link" href="tel:+380961111111"><svg class="contacts-link-icon" width="10px" height="16px">
+          <use href="./images/header-icons.svg#icon-smartphone"></use>
+        </svg>+38 096 111 11 11</a></li>
       </ul>
     </div>
     </header>
-    <main>
+  <main>
       <section class="baner">
         <div class="container">
         <h1 class="baner-title">Эффективные решения<br/>для вашего бизнеса</h1>
         <button type="button" class="baner-bt">Заказать услугу</button>
         </div>
       </section>
-      <section class="section">
+      <section class="section process">
         <div class="container">
          <ul class="about-list">
           <li class="about-item">
+            <div class="about-item-link">
+              <svg class="about-item-icon" width="70px" height="70px">
+                <use href="./images/Peculiarities.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="about-item-title">Внимание к деталям</h3>
             <p class="about-item-text">
               Идейные соображения, а также начало повседневной работы по
@@ -47,6 +56,11 @@
             </p>
           </li>
           <li class="about-item">
+            <div class="about-item-link">
+              <svg class="about-item-icon" width="70px" height="70px">
+                <use href="./images/Peculiarities.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="about-item-title">Пунктуальность</h3>
             <p class="about-item-text">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -54,6 +68,11 @@
             </p>
           </li>
           <li class="about-item">
+            <div class="about-item-link">
+              <svg class="about-item-icon" width="70px" height="70px">
+                <use href="./images/Peculiarities.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="about-item-title">Планирование</h3>
             <p class="about-item-text">
               Равным образом консультация с широким активом в значительной
@@ -61,6 +80,11 @@
             </p>
           </li>
           <li  class="about-item">
+            <div class="about-item-link">
+              <svg class="about-item-icon" width="70px" height="70px">
+                <use href="./images/Peculiarities.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="about-item-title">Современные технологии</h3>
             <p class="about-item-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -69,9 +93,9 @@
           </li>
         </ul>
         </div>
-      <section/>
-      <section class="section work">
-          <div class="container">
+</section>
+    <section class="section work">
+        <div class="container">
         <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="work-list">
           <li class="work-item">
@@ -99,9 +123,9 @@
             />
           </li>
         </ul>
-      </div>
-      </section>
-      <section class="section team">
+        </div>
+    </section>
+    <section class="section team">
         <div class="container">
         <h2 class="team-title">Наша команда</h2>
         <ul class="list team-list">
@@ -120,22 +144,30 @@
           <ul class="team-social-list">
             <li class="team-social-item">
               <a href="" class="team-social-link">
-
+                <svg class="team-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
             </a>
             </li>
             <li class="team-social-item">
               <a href="" class="team-social-link">
-
+              <svg class="team-social-icon" width="20px" height="20px">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
             </a>
             </li>
             <li class="team-social-item">
               <a href="" class="team-social-link">
-
+                <svg class="team-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
             </a>
             </li>
             <li class="team-social-item">
               <a href="" class="team-social-link">
-
+                <svg class="team-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
             </a>
             </li>
           </ul>
@@ -158,22 +190,30 @@
             <ul class="team-social-list">
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                <svg class="team-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
               </a>
               </li>
             </ul>
@@ -196,23 +236,31 @@
             <ul class="team-social-list">
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
-              </a>
-              <li class="team-social-item">
-                <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                <svg class="team-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
               </a>
               </li>
+              <li class="team-social-item">
+                <a href="" class="team-social-link">
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+              </a>
               </li>
             </ul>
           </div>  
@@ -234,22 +282,30 @@
             <ul class="team-social-list">
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                <svg class="team-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
               </a>
               </li>
               <li class="team-social-item">
                 <a href="" class="team-social-link">
-  
+                  <svg class="team-social-icon" width="20px" height="20px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
               </a>
               </li>
             </ul>
@@ -258,12 +314,62 @@
            </div>
           </li>
         </ul>
-      </div>
-      </section>
-    </main>
+        </div>
+    </section>
+    <section class="section clients">
+      <h2 class="clients-title">Постоянные клиенты</h2>
+      <ul class="clients-list">
+        <li class="clients-item"> 
+          <a href="" class="clients-link">
+            <svg class="clients-icon" width="40px" height="46.7px">
+              <use href="./images/clients.svg#icon-yoco"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item"> 
+          <a href="" class="clients-link">
+            <svg class="clients-icon" width="40px" height="52px">
+              <use href="./images/clients.svg#icon-company1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item"> 
+          <a href="" class="clients-link">
+            <svg class="clients-icon" width="43.46px" height="41.18px">
+              <use href="./images/clients.svg#icon-company2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item"> 
+          <a href="" class="clients-link">
+            <svg class="clients-icon" width="84.44px" height="40.62px">
+              <use href="./images/clients.svg#icon-foster"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item"> 
+          <a href="" class="clients-link">
+            <svg class="clients-icon" width="62.54px" height="45.43px">
+              <use href="./images/clients.svg#icon-brand"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item"> 
+          <a href="" class="clients-link">
+            <svg class="clients-icon" width="93.79px" height="43.93px">
+              <use href="./images/clients.svg#icon-company3"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
     <footer>
       <div class="container">
-      <a class="header-logo" href="./index.html">Web<span class="logo-color-footer">Studio</span></a>
+        <div class="container-footer">
+          <a class="header-logo" href="./index.html">Web<span class="logo-color-footer">Studio</span></a>
+          <h3 class="footer-social-text">Присоединяйтесь</h3>
+        </div>
       <address class="footer-address">
         <ul class="footer-list">
           <li class="footer-item"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
@@ -276,8 +382,40 @@
             <a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      <div class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+              <svg class="footer-social-icon" width="20px" height="20px">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+            </li>
+          </ul>
     </div>
+    </div>
+  </address>
     </footer>
   </body>
 </html>
