--- a/portfolio.html
+++ b/portfolio.html
@@ -42,17 +42,14 @@
           </ul>
         </nav>
         <ul class="contacts">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+          <ul class="contacts">
+            <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com"><svg class="contacts-link-icon" width="16px" height="12px">
+              <use href="./images/header-icons.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a></li>
+            <li class="contacts-item"><a class="contacts-link" href="tel:+380961111111"><svg class="contacts-link-icon" width="10px" height="16px">
+              <use href="./images/header-icons.svg#icon-smartphone"></use>
+            </svg>+38 096 111 11 11</a></li>
+          </ul>
       </div>
     </header>
     <main>
@@ -175,25 +172,56 @@
     </main>
     <footer>
       <div class="container">
-        <a class="header-logo" href="./index.html"
-          >Web<span class="logo-color-footer">Studio</span></a
-        >
-        <address class="footer-address">
-          <ul class="footer-list">
-            <li class="footer-item"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-            <li>
-              <a class="link-footer" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+        <div class="container-footer">
+          <a class="header-logo" href="./index.html">Web<span class="logo-color-footer">Studio</span></a>
+          <h3 class="footer-social-text">Присоединяйтесь</h3>
+        </div>
+      <address class="footer-address">
+        <ul class="footer-list">
+          <li class="footer-item"><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li>
+            <a class="link-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      <div class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a>
             </li>
-            <li>
-              <a class="link-footer" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+              <svg class="footer-social-icon" width="20px" height="20px">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+            </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a>
             </li>
           </ul>
-        </address>
-      </div>
+    </div>
+    </div>
+    </address>
     </footer>
   </body>
 </html>
