--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="button-title">Наши преимущества</h1>
+          <h1 class="visually-hidden">Наши преимущества</h1>
           <ul class="button-wrap">
             <li class="button-item">
               <button type="button" class="button-bt">Все</button>
